+ using virtual threads for default executor + mandating java 21